fixed page hero text alignment

--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -54,8 +54,12 @@
 }
 .page-content.about .section-3 .layout-width .bg-clip {
   position: relative;
-  clip-path: url("#our-values-mask");
   padding: 3rem 2rem 10rem 2rem;
+}
+@media screen and (min-width: 401px) {
+  .page-content.about .section-3 .layout-width .bg-clip {
+    clip-path: url("#our-values-mask");
+  }
 }
 @media screen and (min-width: 992px) {
   .page-content.about .section-3 .layout-width .bg-clip.grid-3-col {
